--- a/test/phpunit.xml.dist
+++ b/test/phpunit.xml.dist
@@ -62,6 +62,9 @@
         <testsuite name="Status">
             <directory>status</directory>
         </testsuite>
+        <testsuite name="Setup">
+            <file>setup/SetupUtilsTest.php</file>
+        </testsuite>
         <testsuite name="Integration">
             <directory>integration</directory>
         </testsuite>
